--- a/404.html
+++ b/404.html
@@ -16,9 +16,9 @@
 			to{top: 20%;}
 		}
 		@keyframes move2 {
-			from{top: 100%;}
-			to{top: 95%;}
-		}
+			from{height: 0;top: 100%;}
+			to{height: 4%;top: 95%;}
+		}	
 		body {
 			background-image: url("https://th.bing.com/th/id/R.8bd6ea8aa923f79426f98942246013d1?rik=z3kYppPfT80M3w&pid=ImgRaw&r=0");
 			background-repeat: no-repeat;
@@ -38,7 +38,7 @@
 			justify-content: center;
 			flex-direction: column;
 
-			animation: move1 3s;
+			animation: move1 2.5s;
 			position: absolute;
 			background-color: rgb(255,255,255,0.6);
 			border-radius: 20px;
@@ -80,7 +80,7 @@
 			-webkit-transition: all 0.6s ease;
 		}
 		.footer {
-			animation: move2 3s;
+			animation: move2 2.5s;
 			background-color: rgb(255,255,255,0.6);
 			position: absolute;
 			height: 4%;
@@ -88,7 +88,6 @@
 			top: 95%;
 			left: 0%;
 			padding-top: 0.5%;
-			/* border-top: 1px solid #efefef; */
 			color: rgb(75, 75, 75);
 			font-weight: lighter;
 		}
