--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>My Dear yyc 生日快乐！</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <link rel="shortcut icon" href="/favicon.ico?v=1662869235224">
+</head>
+  
+  <p>My Dear yyc 生日快乐！</p>
+  
+</html>
+
