--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="shortcut icon" href="/favicon.ico?v=1662869235224">
 </head>
   
+<body>
   <p>My Dear yyc 生日快乐！</p>
+</body>
   
 </html>
 
