--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" href="/favicon.ico?v=1662869235224">
+  <link rel="shortcut icon" href="/yyc48x48.ico">
 </head>
   
 <body>
