--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
 		}
 		@keyframes widths1 {
 			from {width: 0;}
-			to {width: 450px;}
+			to {width: 16ch;}
 		}
 		@keyframes move1{
 			from{top:-50%;}
 			to{top:20%;}
+		}
+		@keyframes array_move{
+			0%{top: 89%;}
+			50%{top: 90%;}
+			100%{top:89%;}
 		}
 		body{
 			background-image: url("https://th.bing.com/th/id/R.8bd6ea8aa923f79426f98942246013d1?rik=z3kYppPfT80M3w&pid=ImgRaw&r=0");
@@ -52,7 +57,7 @@
 		}
 		.box p:nth-child(2){
 			border-right: 2px solid rgba(0, 0, 0, 0);
-			animation: widths1 2s steps(5) 6.5s both, broders 0.7s 10 normal 3.7s both;
+			animation: widths1 2s steps(16) 6.5s both, broders 0.7s 10 normal 3.7s both;
 		}
 		.box{
 			flex: 1;
@@ -82,7 +87,10 @@
 			background-position: center;
 			z-index: 100;
 			position: absolute;
-			
+			top: 90%;
+			left: 50%;
+			animation: array_move 1.5s infinite;
+			transition: all 0.5s ease;
 		}
 	</style>
 </head>
@@ -90,9 +98,9 @@
 <body>
 	<div class="box">
 		<p class="words ch1">My Dear yyc</p>
-		<p class="words ch2"> 生日快乐！</p>
+		<p class="words ch2"> Happy Birthday !</p>
 	</div>
-	<div class="pulldown"></div>
+	<a href="yycforever.github.io/content" class="pulldown"></a>
 </body>
 
 </html>
