--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<p class="words ch1">My Dear yyc</p>
 		<p class="words ch2"> Happy Birthday !</p>
 	</div>
-	<a href="yycforever.github.io/content" class="pulldown"></a>
+	<a href="https://yycforever.github.io/content" class="pulldown"></a>
 </body>
 
 </html>
