--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <script>
 	function typekey(){
 		var key=prompt("Please enter the password.");
-		if(key!=="yyc should drink more milk.")location.replace("https://yycforever.github.io/404");
+		if(key!=1)location.replace("https://yycforever.github.io/404");
 	}
 </script>
 </html>
