--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 <script>
 	function typekey(){
 		var key=prompt("Please enter the password.");
-		if(key!=1)location.replace("https://yycforever.github.io/404");
+		const ans="yyc should drink more milk.";
+		if(key!=ans)location.replace("https://yycforever.github.io/404");
 	}
 </script>
 </html>
