--- a/content/index.html
+++ b/content/index.html
@@ -45,7 +45,6 @@
 			display: flex;
 			flex-direction: column;
 			height: 100vh;
-			text-align: center;
 		}
 		.yycph{
 			background-image: url(yyc.jpg);
@@ -171,14 +170,14 @@
 	<div class="yycfdu"></div>
 	<div class="yxrthu"></div>
 	<div class="attention" id="fi-1" onmouseout="disapear()" onmouseover="apear()">
-		<h1>-Attention-</h3>
-		<br></br>
+		<h1 align="center">-Attention-</h1>
+		<br>
 		<li><b>Please turn down the music before you turn it on.</b></li>
-		<br></br>
+		<br>
 		<li><b>Find a special element and click it to skip to the next page.</b></li>
-		<br></br>
+		<br>
 		<li><b>Move your mouse away,and this attention will hide.</b></li>
-		<br></br>
+		<br>
 		<li>图片有点糊，这句话有点突兀，请谅解。</li>
 	</div>
 </body>
