--- a/naoche/index.html
+++ b/naoche/index.html
@@ -5,6 +5,7 @@
 	<link rel="shortcut icon" href="/yyc48x48.ico">
 	<style>
 		body{
+			user-select: none;
 			z-index: -1;
 			/* background-color: blue; */
 			background-image: url("https://user-images.githubusercontent.com/95968907/207225945-9d619391-dd30-44bd-89ef-8c30c50aa2be.gif");
@@ -195,6 +196,8 @@
 		<li><b>沿着箭头点击。</b></li>
 		<br>
 		<li>背景有点魔怔，密集，请谅解。</li>
+		<br>
+		<li><b>But yyc love zhenguoli.</b></li>
 	</div>
 	<div class="finish" id="finish">
 		<h2>为我的魔怔道歉。</h2> <br>
