--- a/naoche/index.html
+++ b/naoche/index.html
@@ -191,7 +191,7 @@
 	<div class="attention" id="fi-1" onmouseout="disapear()" onmouseover="apear()">
 		<h1 align="center">-Attention-</h1>
 		<br>
-		<li><b>如果不想继续可以<a href="https://yycforever.github.io/timeshaft/">这里<a>跳过。</b></li>
+		<li><b>如果不想继续可以<a href="https://yycforever.github.io/gift/">这里<a>跳过。</b></li>
 		<br>
 		<li><b>沿着箭头点击。</b></li>
 		<br>
@@ -202,7 +202,7 @@
 	<div class="finish" id="finish">
 		<h2>为我的魔怔道歉。</h2> <br>
 		<h2>后面没这么恐怖了。</h2> <br>
-		<h1><a href="https://yycforever.github.io/timeshaft/">Continue -></h1>
+		<h1><a href="https://yycforever.github.io/gift/">Continue -></h1>
 	</div>
 </body>
 <script>
@@ -266,7 +266,7 @@
 	}
 	function attention(){
 		var tmp=prompt("做好准备，这页有点魔性，和密集，如果难受或不适可以跳过此页面。\\ww\n\n 0 跳过， 1 继续。\n");
-		if(tmp==0)location.assign("https://yycforever.github.io/timeshaft/");
+		if(tmp==0)location.assign("https://yycforever.github.io/gift/");
 	}
 </script>
 </html>
