--- a/content/index.html
+++ b/content/index.html
@@ -35,6 +35,7 @@
 			to{right:0%;opacity: 1;}
 		}
 		body{
+			user-select: none;
 			background-color: rgb(255,255,255,1);
 			background-repeat: no-repeat;
 			background-size: cover;
